add rabbit to ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,15 @@ language: ruby
 rvm:
   - 2.6.3
 
+dist: xenial
+addons:
+  apt:
+    packages:
+      - rabbitmq-server
+
 services:
   - mongodb
+  - rabbitmq
 
 before_install:
   - gem update --system
